--- a/app/templates/includes/sidebar.html
+++ b/app/templates/includes/sidebar.html
@@ -72,6 +72,10 @@
                 <span class="nav-link-icon"><i class="fa-solid fa-list"></i></span>
                 <span class="nav-link-text">Prompts</span>
             </a>
+            <a class="nav-link" type="button" href="/upload">
+                <span class="nav-link-icon"><i class="fas fa-upload"></i></span>
+                <span class="nav-link-text">Upload</span>
+            </a>
             <a class="nav-link" type="button" href="/integrations">
                 <span class="nav-link-icon"><i class="fas fa-link"></i></span>
                 <span class="nav-link-text">Integrations</span>
